--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- <img src="./immagini/immagine1.jpg" alt=""> -->
             <img v-bind:src="immagini[indice]" alt="" class="">
 
-            <i class="fa-solid fa-chevron-right fs-2 bottone" @onclick=" "></i>
+            <i class="fa-solid fa-chevron-right fs-2 bottone" @onclick=" prossimaImmagine "></i>
         </div>
         
 
