--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="root">
         <div class="text-center centro">
-            <i class="fa-solid fa-chevron-left bottone fs-4" @click=""></i>
+            <i class="fa-solid fa-chevron-left bottone fs-4" @click="immaginePrecedente"></i>
             <!-- <img src="./immagini/immagine1.jpg" alt=""> -->
             <img v-bind:src="immagini[indice].immagine" alt="" class="mx-3">
 
